lenguajeInfantilParser.py
# Generated from lenguajeInfantil.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lenguajeInfantilParser ( Parser ):

    grammarFileName = "lenguajeInfantil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'NumeroEntero'", "'NumeroDecimal'", 
                     "'Texto'", "'VerdaderoFalso'", "'declarar'", "'declararConstante'", 
                     "'como'", "'='", "'+'", "'-'", "'*'", "'/'", "'^'", 
                     "'mayorque'", "'menorque'", "'mayorigualque'", "'menorigualque'", 
                     "'igual'", "'diferente'", "'si'", "'sino'", "'repetir'", 
                     "'veces'", "'mientras'", "'funcion'", "'mostrar'", 
                     "'esperar'", "'intentar'", "'capturar'", "'error'", 
                     "'lista'", "'agregar'", "'obtener'", "'{'", "'}'", 
                     "'('", "')'", "<INVALID>", "<INVALID>", "'verdadero'", 
                     "'falso'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "TIPO_ENTERO", "TIPO_DECIMAL", 
                      "TIPO_TEXTO", "TIPO_BOOLEANO", "DECLARAR", "DECLARAR_CONSTANTE", 
                      "COMO", "IGUAL", "SUMA", "RESTA", "MULT", "DIV", "POTENCIA", 
                      "MAYORQUE", "MENORQUE", "MAYORIGUALQUE", "MENORIGUALQUE", 
                      "IGUALDAD", "DIFERENTE", "SI", "SINO", "REPITE", "VECES", 
                      "MIENTRAS", "FUNCION", "MOSTRAR", "ESPERAR", "INTENTAR", 
                      "CAPTURAR", "ERROR", "LISTA", "AGREGAR", "OBTENER", 
                      "LLAVE_IZQ", "LLAVE_DER", "PAREN_IZQ", "PAREN_DER", 
                      "NUMERO", "TEXTO", "VERDADERO", "FALSO", "ID", "NEWLINE", 
                      "WS" ]

    RULE_programa = 0
    RULE_declaracion = 1
    RULE_tipo_dato = 2
    RULE_valor = 3
    RULE_sentencia = 4
    RULE_asignacion = 5
    RULE_operacion = 6
    RULE_condicional = 7
    RULE_ciclo = 8
    RULE_mostrar = 9
    RULE_esperar = 10
    RULE_manejo_errores = 11
    RULE_funcion = 12
    RULE_parametros = 13
    RULE_expresion = 14
    RULE_lista = 15
    RULE_callfuncion = 16
    RULE_argumentos = 17

    ruleNames =  [ "programa", "declaracion", "tipo_dato", "valor", "sentencia", 
                   "asignacion", "operacion", "condicional", "ciclo", "mostrar", 
                   "esperar", "manejo_errores", "funcion", "parametros", 
                   "expresion", "lista", "callfuncion", "argumentos" ]

    EOF = Token.EOF
    T__0=1
    TIPO_ENTERO=2
    TIPO_DECIMAL=3
    TIPO_TEXTO=4
    TIPO_BOOLEANO=5
    DECLARAR=6
    DECLARAR_CONSTANTE=7
    COMO=8
    IGUAL=9
    SUMA=10
    RESTA=11
    MULT=12
    DIV=13
    POTENCIA=14
    MAYORQUE=15
    MENORQUE=16
    MAYORIGUALQUE=17
    MENORIGUALQUE=18
    IGUALDAD=19
    DIFERENTE=20
    SI=21
    SINO=22
    REPITE=23
    VECES=24
    MIENTRAS=25
    FUNCION=26
    MOSTRAR=27
    ESPERAR=28
    INTENTAR=29
    CAPTURAR=30
    ERROR=31
    LISTA=32
    AGREGAR=33
    OBTENER=34
    LLAVE_IZQ=35
    LLAVE_DER=36
    PAREN_IZQ=37
    PAREN_DER=38
    NUMERO=39
    TEXTO=40
    VERDADERO=41
    FALSO=42
    ID=43
    NEWLINE=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.DeclaracionContext,i)


        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.FuncionContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.FuncionContext,i)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.SentenciaContext,i)


        def lista(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.ListaContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.ListaContext,i)


        def manejo_errores(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.Manejo_erroresContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.Manejo_erroresContext,i)


        def callfuncion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.CallfuncionContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.CallfuncionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeInfantilParser.NEWLINE)
            else:
                return self.getToken(lenguajeInfantilParser.NEWLINE, i)

        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = lenguajeInfantilParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34635666948288) != 0):
                self.state = 43
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.declaracion()
                    pass

                elif la_ == 2:
                    self.state = 37
                    self.funcion()
                    pass

                elif la_ == 3:
                    self.state = 38
                    self.sentencia()
                    pass

                elif la_ == 4:
                    self.state = 39
                    self.lista()
                    pass

                elif la_ == 5:
                    self.state = 40
                    self.manejo_errores()
                    pass

                elif la_ == 6:
                    self.state = 41
                    self.callfuncion()
                    pass

                elif la_ == 7:
                    self.state = 42
                    self.match(lenguajeInfantilParser.NEWLINE)
                    pass


                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECLARAR(self):
            return self.getToken(lenguajeInfantilParser.DECLARAR, 0)

        def ID(self):
            return self.getToken(lenguajeInfantilParser.ID, 0)

        def COMO(self):
            return self.getToken(lenguajeInfantilParser.COMO, 0)

        def tipo_dato(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.Tipo_datoContext,0)


        def NEWLINE(self):
            return self.getToken(lenguajeInfantilParser.NEWLINE, 0)

        def DECLARAR_CONSTANTE(self):
            return self.getToken(lenguajeInfantilParser.DECLARAR_CONSTANTE, 0)

        def IGUAL(self):
            return self.getToken(lenguajeInfantilParser.IGUAL, 0)

        def valor(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.ValorContext,0)


        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):

        localctx = lenguajeInfantilParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracion)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(lenguajeInfantilParser.DECLARAR)
                self.state = 49
                self.match(lenguajeInfantilParser.ID)
                self.state = 50
                self.match(lenguajeInfantilParser.COMO)
                self.state = 51
                self.tipo_dato()
                self.state = 52
                self.match(lenguajeInfantilParser.NEWLINE)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(lenguajeInfantilParser.DECLARAR_CONSTANTE)
                self.state = 55
                self.match(lenguajeInfantilParser.ID)
                self.state = 56
                self.match(lenguajeInfantilParser.COMO)
                self.state = 57
                self.tipo_dato()
                self.state = 58
                self.match(lenguajeInfantilParser.IGUAL)
                self.state = 59
                self.valor()
                self.state = 60
                self.match(lenguajeInfantilParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_datoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO_ENTERO(self):
            return self.getToken(lenguajeInfantilParser.TIPO_ENTERO, 0)

        def TIPO_DECIMAL(self):
            return self.getToken(lenguajeInfantilParser.TIPO_DECIMAL, 0)

        def TIPO_TEXTO(self):
            return self.getToken(lenguajeInfantilParser.TIPO_TEXTO, 0)

        def TIPO_BOOLEANO(self):
            return self.getToken(lenguajeInfantilParser.TIPO_BOOLEANO, 0)

        def LISTA(self):
            return self.getToken(lenguajeInfantilParser.LISTA, 0)

        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_tipo_dato

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_dato" ):
                listener.enterTipo_dato(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_dato" ):
                listener.exitTipo_dato(self)




    def tipo_dato(self):

        localctx = lenguajeInfantilParser.Tipo_datoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo_dato)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4294967356) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(lenguajeInfantilParser.NUMERO, 0)

        def TEXTO(self):
            return self.getToken(lenguajeInfantilParser.TEXTO, 0)

        def VERDADERO(self):
            return self.getToken(lenguajeInfantilParser.VERDADERO, 0)

        def FALSO(self):
            return self.getToken(lenguajeInfantilParser.FALSO, 0)

        def ID(self):
            return self.getToken(lenguajeInfantilParser.ID, 0)

        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)




    def valor(self):

        localctx = lenguajeInfantilParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 17042430230528) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.AsignacionContext,0)


        def operacion(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.OperacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.CondicionalContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.CicloContext,0)


        def mostrar(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.MostrarContext,0)


        def esperar(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.EsperarContext,0)


        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = lenguajeInfantilParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentencia)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.operacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.condicional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.ciclo()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.mostrar()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.esperar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(lenguajeInfantilParser.ID, 0)

        def IGUAL(self):
            return self.getToken(lenguajeInfantilParser.IGUAL, 0)

        def NEWLINE(self):
            return self.getToken(lenguajeInfantilParser.NEWLINE, 0)

        def EOF(self):
            return self.getToken(lenguajeInfantilParser.EOF, 0)

        def operacion(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.OperacionContext,0)


        def valor(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.ValorContext,0)


        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = lenguajeInfantilParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(lenguajeInfantilParser.ID)
            self.state = 77
            self.match(lenguajeInfantilParser.IGUAL)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 78
                self.operacion()
                pass

            elif la_ == 2:
                self.state = 79
                self.valor()
                pass


            self.state = 82
            _la = self._input.LA(1)
            if not(_la==-1 or _la==44):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.ValorContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.ValorContext,i)


        def SUMA(self):
            return self.getToken(lenguajeInfantilParser.SUMA, 0)

        def RESTA(self):
            return self.getToken(lenguajeInfantilParser.RESTA, 0)

        def MULT(self):
            return self.getToken(lenguajeInfantilParser.MULT, 0)

        def DIV(self):
            return self.getToken(lenguajeInfantilParser.DIV, 0)

        def POTENCIA(self):
            return self.getToken(lenguajeInfantilParser.POTENCIA, 0)

        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_operacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacion" ):
                listener.enterOperacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacion" ):
                listener.exitOperacion(self)




    def operacion(self):

        localctx = lenguajeInfantilParser.OperacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.valor()
            self.state = 85
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(lenguajeInfantilParser.SI, 0)

        def expresion(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.ExpresionContext,0)


        def LLAVE_IZQ(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeInfantilParser.LLAVE_IZQ)
            else:
                return self.getToken(lenguajeInfantilParser.LLAVE_IZQ, i)

        def programa(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeInfantilParser.ProgramaContext)
            else:
                return self.getTypedRuleContext(lenguajeInfantilParser.ProgramaContext,i)


        def LLAVE_DER(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeInfantilParser.LLAVE_DER)
            else:
                return self.getToken(lenguajeInfantilParser.LLAVE_DER, i)

        def SINO(self):
            return self.getToken(lenguajeInfantilParser.SINO, 0)

        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = lenguajeInfantilParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(lenguajeInfantilParser.SI)
            self.state = 89
            self.expresion()
            self.state = 90
            self.match(lenguajeInfantilParser.LLAVE_IZQ)
            self.state = 91
            self.programa()
            self.state = 92
            self.match(lenguajeInfantilParser.LLAVE_DER)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 93
                self.match(lenguajeInfantilParser.SINO)
                self.state = 94
                self.match(lenguajeInfantilParser.LLAVE_IZQ)
                self.state = 95
                self.programa()
                self.state = 96
                self.match(lenguajeInfantilParser.LLAVE_DER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPITE(self):
            return self.getToken(lenguajeInfantilParser.REPITE, 0)

        def NUMERO(self):
            return self.getToken(lenguajeInfantilParser.NUMERO, 0)

        def VECES(self):
            return self.getToken(lenguajeInfantilParser.VECES, 0)

        def LLAVE_IZQ(self):
            return self.getToken(lenguajeInfantilParser.LLAVE_IZQ, 0)

        def programa(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.ProgramaContext,0)


        def LLAVE_DER(self):
            return self.getToken(lenguajeInfantilParser.LLAVE_DER, 0)

        def MIENTRAS(self):
            return self.getToken(lenguajeInfantilParser.MIENTRAS, 0)

        def expresion(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.ExpresionContext,0)


        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)




    def ciclo(self):

        localctx = lenguajeInfantilParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ciclo)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(lenguajeInfantilParser.REPITE)
                self.state = 101
                self.match(lenguajeInfantilParser.NUMERO)
                self.state = 102
                self.match(lenguajeInfantilParser.VECES)
                self.state = 103
                self.match(lenguajeInfantilParser.LLAVE_IZQ)
                self.state = 104
                self.programa()
                self.state = 105
                self.match(lenguajeInfantilParser.LLAVE_DER)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(lenguajeInfantilParser.MIENTRAS)
                self.state = 108
                self.expresion()
                self.state = 109
                self.match(lenguajeInfantilParser.LLAVE_IZQ)
                self.state = 110
                self.programa()
                self.state = 111
                self.match(lenguajeInfantilParser.LLAVE_DER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MostrarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOSTRAR(self):
            return self.getToken(lenguajeInfantilParser.MOSTRAR, 0)

        def NEWLINE(self):
            return self.getToken(lenguajeInfantilParser.NEWLINE, 0)

        def EOF(self):
            return self.getToken(lenguajeInfantilParser.EOF, 0)

        def TEXTO(self):
            return self.getToken(lenguajeInfantilParser.TEXTO, 0)

        def ID(self):
            return self.getToken(lenguajeInfantilParser.ID, 0)

        def valor(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.ValorContext,0)


        def operacion(self):
            return self.getTypedRuleContext(lenguajeInfantilParser.OperacionContext,0)


        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_mostrar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMostrar" ):
                listener.enterMostrar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMostrar" ):
                listener.exitMostrar(self)




    def mostrar(self):

        localctx = lenguajeInfantilParser.MostrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mostrar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(lenguajeInfantilParser.MOSTRAR)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 116
                self.match(lenguajeInfantilParser.TEXTO)
                pass

            elif la_ == 2:
                self.state = 117
                self.match(lenguajeInfantilParser.ID)
                pass

            elif la_ == 3:
                self.state = 118
                self.valor()
                pass

            elif la_ == 4:
                self.state = 119
                self.operacion()
                pass


            self.state = 122
            _la = self._input.LA(1)
            if not(_la==-1 or _la==44):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EsperarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESPERAR(self):
            return self.getToken(lenguajeInfantilParser.ESPERAR, 0)

        def NUMERO(self):
            return self.getToken(lenguajeInfantilParser.NUMERO, 0)

        def NEWLINE(self):
            return self.getToken(lenguajeInfantilParser.NEWLINE, 0)

        def EOF(self):
            return self.getToken(lenguajeInfantilParser.EOF, 0)

        def getRuleIndex(self):
            return lenguajeInfantilParser.RULE_esperar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEsperar" ):
                listener.enterEsperar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEsperar" ):
                listener.exitEsperar(self)




    def esperar(self):
